--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -9,6 +9,8 @@ html(lang="en")
 
     body
         include ../partials/nav.pug
+        include ../partials/flash.pug
+        
         block content
 
         script(src='http://code.jquery.com/jquery-3.4.1.min.js' integrity='sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=' crossorigin='anonymous')
