--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -25,22 +25,26 @@ body {
   margin-top: 60px;
 }
 
+.container {
+  margin-top: 60px;
+}
+
 .destroy {
   display: inline;
 }
 
-.destroy>input[type="submit"] {
+.destroy > input[type="submit"] {
   margin: 0;
   padding: 0;
-  background: none;
+  background:none;
   border: 0;
   color: #007bff;
 }
 
-.destroy:hover>input[type="submit"] {
+.destroy:hover > input[type="submit"] {
   text-decoration: underline;
 }
 
-.container {
+.flash{
   margin-top: 60px;
 }
