--- a/views/blogs/form.pug
+++ b/views/blogs/form.pug
@@ -9,13 +9,14 @@ form(action=(blog ? `/blogs/update` : "/blogs"), method="POST")
   .form-group
     label Content
     textarea.form-control(name="blog[content]")
-      = blog ? blog.title : null
+      = blog ? blog.content : null
 
   .form-group
     label Status
     select.form-control(name="blog[status]", required)
       each status in ['DRAFT', 'PUBLISHED']
-        option(value=status, selected=(blog && blog.status === status ? true : false))= status.toLowerCase()
+        option(value=status, selected=(blog && blog.status === status))
+          = status.toLowerCase()
   
   .form-group
     button.btn.btn-dark(type="submit") Submit
