--- a/views/blogs/index.pug
+++ b/views/blogs/index.pug
@@ -10,7 +10,7 @@ block content
           tr
             th Title
             th Status
-            th
+            th Actions
         
         tbody
           each blog in blogs
@@ -20,7 +20,7 @@ block content
               td= blog.status
               td
                 a(href=`/blogs/${blog.id}/edit`) edit
-                =` | `
-              form.destroy(action=`/blogs/${blog.id}/destroy`, method="POST")
-                  input(type="hidden", name="blog[id]", value=`${blog.id}`)
-                  input.destroy(type="submit", value="destroy")
+                =' | '
+              form.destroy(action=`/blogs/destroy`, method="POST", onsubmit= `return confirm("are you sure???")`)
+                  input(type="hidden", name="id", value=blog.id)
+                  input(type="submit", value="delete")
