--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -36,7 +36,7 @@ body {
 .destroy > input[type="submit"] {
   margin: 0;
   padding: 0;
-  background:none;
+  background: none;
   border: 0;
   color: #007bff;
 }
@@ -47,4 +47,23 @@ body {
 
 .flash{
   margin-top: 60px;
+}
+
+.nav-destroy>input[type="submit"] {
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: 0;
+  color: rgba(0, 0, 0, .5);
+  display: block;
+  padding: .5rem 0.5rem;
+}
+
+.nav-destroy>input[type="submit"] {
+  padding-right: .5rem;
+  padding-left: .5rem;
+}
+
+.nav-destroy:hover>input[type="submit"] {
+  color: rgba(0, 0, 0, .7);
 }
